# EVA-OS

./: BUILD_REDOX_EVA.md  README-ONNX-NPU.md  README.md  REDOX_RFC_ISSUE.md  checkpoint.md  claude.md  cross-compile-redox.sh
.cargo/: config.toml
MD/: Googolplex-Books.md  checkpoint01.md
ONNX/: convert_qwen_npu.py
ONNX/rust-api/: Cargo.toml
ONNX/rust-api/examples/: yolo.rs
ONNX/rust-api/src/: lib.rs
drive/: .gitignore  Cargo.toml  README.md
drive/src/: dma.rs  pci.rs  scheme.rs
driver-c-api/: Cargo.toml  build.rs  eva_npu.h
driver-c-api/src/: lib.rs
eva-daemon/: Cargo.toml  README.md
eva-daemon/src/: audio_player.rs  command_executor.rs  command_parser.rs  custom_commands.rs  emotion.rs  macros.rs  main.rs  session.rs  user_profile.rs
eva-daemon/src/timemachine/: mod.rs
examples/: yolo_npu.c
