[package]
name = "intel-npu"
version = "0.1.0"
edition = "2021"
authors = ["EVA OS Team <jose@eva-os.org>"]
description = "Intel Meteor Lake NPU Driver for Redox OS (Userspace)"
license = "MIT"

[dependencies]
log = "0.4"
env_logger = "0.10"

[target.'cfg(target_os = "redox")'.dependencies]
syscall = { package = "redox_syscall", version = "0.5" }

[target.'cfg(not(target_os = "redox"))'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 2
lto = true
